--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <div class="Testdive">
-      <h1>Test</h1>
+    <div class="container">
+      <header>
+          <img src="images/FireLogo.png" alt="logo" class="logo">
+      </header>
     </div>
   </body>
 </html>
