--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>AlexanderFagrelius</title>
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
+    <div class="container">
+      <ul>
+        <li>
+          <a href="#">Home</a>
+          <a href="#">Resume</a>
+          <a href="#">About me</a>
+          <a href="#">Projects</a>
+        </li>
+      </ul>
+    </div>
+  </body>
 </html>
