--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+
     <div class="nav-container">
       <header>
         <a href="index.html"
@@ -29,33 +30,31 @@
           </ul>
         </nav>
       </header>
+    </div>
 
+    <div class="centertext">
       <section>
         <h1>Alexander Fagrelius</h1>
         <h2>Web Developer</h2>
       </section>
     </div>
 
-    <footer>
       <div class="footer-container">
-        <div class="container">
           <ul class="footer-pictures">
             <li>
-              <a href="#"
+              <a href="https://www.linkedin.com/in/alexander-fagrelius-b0878b1a8/"
                 ><img src="images/010-linkedin.svg" alt="linkedinLogo"
               /></a>
 
-              <a href="#"
+              <a href="https://www.facebook.com/Winkkey"
                 ><img src="images/001-facebook.svg" alt="linkedinLogo"
               /></a>
 
-              <a href="#"
+              <a href="https://www.instagram.com/alexanderfagrelius/"
                 ><img src="images/011-instagram.svg" alt="linkedinLogo"
               /></a>
             </li>
           </ul>
         </div>
-      </div>
-    </footer>
   </body>
 </html>
