--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
       <div class="footer-container">
           <ul class="footer-pictures">
             <li>
-              <a href="https://www.linkedin.com/in/alexander-fagrelius-b0878b1a8/"
-                ><img src="images/010-linkedin.svg" alt="linkedinLogo"
+              <a target="blank" href="https://www.linkedin.com/in/alexander-fagrelius-b0878b1a8/"
+                ><img src="images/010-linkedin.svg"  alt="linkedinLogo"
               /></a>
 
-              <a href="https://www.facebook.com/Winkkey"
+              <a target="blank" href="https://www.facebook.com/Winkkey"
                 ><img src="images/001-facebook.svg" alt="linkedinLogo"
               /></a>
 
-              <a href="https://www.instagram.com/alexanderfagrelius/"
+              <a target="blank" href="https://www.instagram.com/alexanderfagrelius/"
                 ><img src="images/011-instagram.svg" alt="linkedinLogo"
               /></a>
             </li>
