Fixade kanske texten

--- a/index.html
+++ b/index.html
@@ -24,22 +24,20 @@
             <li id="exit" class="exit-btn hide-desktop">
               <img src="images/exit.svg"  alt="exit-btn" />
             </li>
-            <li><a href="#">Resume</a></li>
+            <li><a href="#">Projects</a></li>
             <li><a href="#">About me</a></li>
+            <li><a href="#">Resumé</a></li>
             <li><a href="#">Contact</a></li>
-            <li><a href="#">Project</a></li>
           </ul>
         </nav>
 
       </header>
     </div>
 
-    <div class="centertext">
-      <section>
+    <section>
         <h1>Alexander Fagrelius</h1>
-        <h2>Web Developer</h2>
+        <p>Web Developer</p>
       </section>
-    </div>
 
       <div class="footer-container">
           <ul class="footer-pictures">
