Ändrade home texten

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 
     <div class="nav-container">
       <header>
-        <a href="index.html"
-          ><img src="images/Home.svg" class="home" alt="Home"
-        /></a>
+        <a class="home" href="index.html">Home</a>
 
         <nav>
           <a href="#" class="hide-desktop">
