--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="nav-container">
       <header>
-        <a class="home" href="index.html">Home</a>
+        <a class="home" href="index.html"><img src="images/logofinal3White.svg" alt="logo"></a>
 
         <nav>
           <a href="#" class="hide-desktop">
