--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
               <a
                 href="https://www.instagram.com/alexanderfagrelius/"
                 target="blank"
-                ><img src="images/011-instagram.svg" alt=""
+                ><img src="images/svg/029-instagram.svg" alt=""
               /></a>
             </div>
             <div class="social-item">
               <a href="https://www.facebook.com/Winkkey" target="blank"
-                ><img src="images/001-facebook.svg" alt=""
+                ><img src="images/svg/036-facebook.svg" alt=""
               /></a>
             </div>
             <div class="social-item">
               <a
                 href="https://www.linkedin.com/in/alexander-fagrelius-b0878b1a8/"
                 target="blank"
-                ><img src="images/010-linkedin.svg" alt=""
+                ><img src="images/svg/027-linkedin.svg" alt=""
               /></a>
             </div>
           </div>
