--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
           <div class="nav-list">
             <div class="hamburger"><div class="bar"></div></div>
             <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Projects</a></li>
-              <li><a href="#">About me</a></li>
-              <li><a href="#">Resumé</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="Projects.html">Projects</a></li>
+              <li><a href="Aboutme.html">About me</a></li>
+              <li><a href="Resumé.html">Resumé</a></li>
+              <li><a href="Contact.html">Contact</a></li>
             </ul>
           </div>
         </div>
