--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <div>
           <h1>Alexander Fagrelius</h1>
           <h2>Web Developer</h2>
+          <p><span id="cycle"></span></p>
           <a href="#" type="button" class="cta">Hire Me!</a>
         </div>
       </div>
@@ -67,6 +68,7 @@
         </div>
       </div>
     </section>
+
     <script src="./app.js"></script>
   </body>
 </html>
