--- a/index.html
+++ b/index.html
@@ -64,11 +64,18 @@
                 ><img src="images/svg/027-linkedin.svg" alt=""
               /></a>
             </div>
+            <div class="social-item">
+              <a
+                href="https://github.com/pennan88"
+                target="blank"
+                ><img src="images/github-logoWhite.svg" alt=""
+              /></a>
+            </div>
           </div>
         </div>
       </div>
     </section>
-
+ 
     <script src="./app.js"></script>
   </body>
 </html>
