--- a/HTMLSub/Contact.html
+++ b/HTMLSub/Contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/Contact.css" />
   </head>
   <body>
     <section id="header">
@@ -12,17 +12,17 @@
         <div class="nav-bar">
           <div class="brand">
             <a href="index.html"
-              ><img src="images/logofinal3White.svg" alt="Logo"
+              ><img src="/images/logofinal3White.svg" alt="Logo"
             /></a>
           </div>
           <div class="nav-list">
             <div class="hamburger"><div class="bar"></div></div>
             <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="Projects.html">Projects</a></li>
-              <li><a href="Aboutme.html">About me</a></li>
-              <li><a href="Resumé.html">Resumé</a></li>
-              <li><a href="Contact.html">Contact</a></li>
+              <li><a href="/..index.html">Home</a></li>
+                <li><a href="/HTMLSub/Projects.html">Projects</a></li>
+                <li><a href="/HTMLSub/Aboutme.html">About me</a></li>
+                <li><a href="/HTMLSub/Resumé.html">Resumé</a></li>
+                <li><a href="/HTMLSub/Contact.html">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -39,32 +39,40 @@
 
     <section id="footer">
       <div class="footer container">
-        <div class="brand"><img src="images/logofinal3White.svg" alt="" /></div>
+        <div class="brand"><img src="/images/logofinal3White.svg" alt="" /></div>
         <div class="social">
           <div class="social-icon">
             <div class="social-item">
               <a
                 href="https://www.instagram.com/alexanderfagrelius/"
                 target="blank"
-                ><img src="images/svg/029-instagram.svg" alt=""
+                ><img src="/images/svg/029-instagram.svg" alt=""
               /></a>
             </div>
             <div class="social-item">
               <a href="https://www.facebook.com/Winkkey" target="blank"
-                ><img src="images/svg/036-facebook.svg" alt=""
+                ><img src="/images/svg/036-facebook.svg" alt=""
               /></a>
             </div>
             <div class="social-item">
               <a
                 href="https://www.linkedin.com/in/alexander-fagrelius-b0878b1a8/"
                 target="blank"
-                ><img src="images/svg/027-linkedin.svg" alt=""
+                ><img src="/images/svg/027-linkedin.svg" alt=""
+              /></a>
+            </div>
+            <div class="social-item">
+              <a
+                href="https://github.com/pennan88"
+                target="blank"
+                ><img src="/images/github-logoWhite.svg" alt=""
               /></a>
             </div>
           </div>
         </div>
       </div>
     </section>
+
     <script src="./app.js"></script>
   </body>
 </html>
