--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <div class="hamburger"><div class="bar"></div></div>
             <ul>
               <li><a href="index.html">Home</a></li>
-              <li><a href="Projects.html">Projects</a></li>
-              <li><a href="Aboutme.html">About me</a></li>
-              <li><a href="Resumé.html">Resumé</a></li>
-              <li><a href="Contact.html">Contact</a></li>
+                <li><a href="/HTMLSub/Projects.html">Projects</a></li>
+                <li><a href="/HTMLSub/Aboutme.html">About me</a></li>
+                <li><a href="/HTMLSub/Resumé.html">Resumé</a></li>
+                <li><a href="/HTMLSub/Contact.html">Contact</a></li>
             </ul>
           </div>
         </div>
