--- a/HTMLSub/Contact.html
+++ b/HTMLSub/Contact.html
@@ -11,7 +11,7 @@
       <div class="header container">
         <div class="nav-bar">
           <div class="brand">
-            <a href="index.html"
+            <a href="/../index.html"
               ><img src="/images/logofinal3White.svg" alt="Logo"
             /></a>
           </div>
