--- a/HTMLSub/Contact.html
+++ b/HTMLSub/Contact.html
@@ -18,7 +18,7 @@
           <div class="nav-list">
             <div class="hamburger"><div class="bar"></div></div>
             <ul>
-              <li><a href="/..index.html">Home</a></li>
+              <li><a href="/../index.html">Home</a></li>
                 <li><a href="/HTMLSub/Projects.html">Projects</a></li>
                 <li><a href="/HTMLSub/Aboutme.html">About me</a></li>
                 <li><a href="/HTMLSub/Resumé.html">Resumé</a></li>
