--- a/HTMLSub/Resumé.html
+++ b/HTMLSub/Resumé.html
@@ -73,6 +73,6 @@
       </div>
     </section>
 
-      <script src="./app.js"></script>
+      <script src="/.././app.js"></script>
 </body>
 </html>
