Added under construction img to unfinished menus

--- a/HTMLSub/Contact.html
+++ b/HTMLSub/Contact.html
@@ -32,7 +32,7 @@
     <section id="hero">
       <div class="hero container">
         <div>
-          
+          <img src="/images/pngfind.com-website-under-construction-png-6238449.png" alt="This page is not yet finished">
         </div>
       </div>
     </section>
